# viz-gateway

./: .c8rc.json  .dockerignore  .env.e2e.example  .env.example  .env.mainnet.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  VIZ-Gateway-Research-and-Plan.md  VIZ-TON-Gateway-Research-and-Plan.md  docker-compose.coordinator.yml  docker-compose.yml  docker-entrypoint.sh  federation.json  federation.json.example  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.test.json
.kamal/: secrets
config/: allowed-origins.README.md  allowed-origins.json  deploy.coordinator.yml  deploy.signer.yml
contracts-solana/: package.json  tsconfig.json
contracts-ton/: README.md  package.json  tsconfig.json
contracts/solana/programs/gateway-deposit/: Cargo.toml
contracts/solana/programs/gateway-deposit/src/: lib.rs
contracts/solana/programs/gateway-deposit/tests/: test_initialize.rs
docs/: AUDIT.md  audit-ed25519-additive-derivation.md  decision-wviz-explorer-ownership.md  e2e.md  handoff-phase1-viz-gate-2of3.md  improvements.md  overview.md  plan-9b-live-3of5.md  plan-f2-signer-source-validation.md  plan-idempotent-delivery.md  plan-mainnet-deploy.md  plan-no-memo-autoreturn.md  plan-nof-m-federation.md  plan-ton-onchain-approval.md  plan-ton-peg-in-idempotency.md  plan-ton-pegout-source-validation.md  plan-vg-medium-findings.md  r1-auditor-outreach.md  runbook-mainnet-bringup.md  runbook-ton-gas-replenishment.md  telegram-multisig-proof.md  telegram-signer-bringup.md
metadata/: ton-assets.wVIZ.yaml  wviz.json
(+158 files in other folders)
