[package]
name = "gateway-deposit"
version = "0.1.0"
description = "Created with Anchor"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gateway_deposit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.1.2"
anchor-spl = { version = "1.1.2", features = ["token_2022"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-program-pack = "3.1.0"
solana-instruction = "3.4.0"
solana-pubkey = "3.0.0"
solana-system-interface = "2.0.0"
serde_json = "1.0"
spl-token-2022-interface = "2.1.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
